app/assets/stylesheets/home.scss
// Place all the styles related to the home controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.bg {
  background: url('/images/croissants.jpg') no-repeat center center;
  background-position: 0px -1000px;
  position: fixed;
  width: 100%;
  height: 500px; /*same height as jumbotron */
  top:0;
  left:0;
  z-index: -1;
}

.jumbotron {
  height: 400px;
  color: white;
  text-shadow: #444 0 1px 1px;
  background:transparent;
}

.call-to-action {
  background-color: #F0C986;
  width: 100%;
  height: 150px;
}

.sign-in {
  background-color: #F0C986;
  width: 100%;
  height: 300px;
  input {
    width: 30%;
    margin: 0 auto;
    float: none;
  }
}

.supported-site img {
  width: auto;
  height: 50px;
}

